// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is possible to use Text component with children 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  OK
</Text>
`;

exports[`is possible to use Text component with custom styles 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      Object {
        "color": "red",
      },
    ]
  }
>
  Styled OK
</Text>
`;

exports[`is possible to use Text component without children 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#141414",
        "fontSize": 16,
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
/>
`;
